<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_Calculate"
        android:layout_width="137dp"
        android:layout_height="59dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="76dp"
        android:text="@string/btn_Calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:text="@string/Btn" />

    <TextView
        android:id="@+id/Outut"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_marginStart="68dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_Calculate" />

    <EditText
        android:id="@+id/Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/input"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input">

        <RadioButton
            android:id="@+id/rd_btn_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rd_btn_C" />

        <RadioButton
            android:id="@+id/rd_btn_F"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rd_btn_F" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Calculate"
        app:srcCompat="@drawable/temperature" />

</androidx.constraintlayout.widget.ConstraintLayout>